OAKHILL/src/objects/Strategy__c.object
<CustomObject>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund Family</label>
        <referenceTo>Fund_Family__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Opportunity_MN_Name__c</fullName>
        <formula>HYPERLINK(&apos;/006/e?RecordType=012i0000001AGu8&amp;CF00Ni000000DjVBA=&apos;+  Name  + &apos;&amp;opp3=&apos; + Name + &apos; : &apos; +  TEXT(TODAY())+ &apos;&amp;opp11=Prospecting&apos;, &quot;New Opportunity&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>As_Of_must_be_populated_w_status_retired</fullName>
        <active>true</active>
        <errorConditionFormula>And( 
 ISPICKVAL(Status__c, &quot;Retired&quot;), 
  ISBLANK( As_of_Date__c ))</errorConditionFormula>
        <errorMessage>Please fill in As of Date field</errorMessage>
    </validationRules>
</CustomObject>